After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 695397 - "ice pellets" sounds funny
"ice pellets" sounds funny
Status: RESOLVED FIXED
Product: libgweather
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: future
Assigned To: libgweather-maint
libgweather-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-07 20:30 UTC by William Jon McCann
Modified: 2013-03-26 15:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
METAR: the code for ice pellets is PL, not PE (1.03 KB, patch)
2013-03-08 23:02 UTC, Giovanni Campagna
committed Details | Review
Yahoo backend: fix parsing of conditions (2.10 KB, patch)
2013-03-08 23:03 UTC, Giovanni Campagna
committed Details | Review
Yr.no backend: fix parsing of conditions (4.85 KB, patch)
2013-03-08 23:03 UTC, Giovanni Campagna
committed Details | Review
GWeatherInfo: translate ice pellets as "sleet" (3.91 KB, patch)
2013-03-08 23:03 UTC, Giovanni Campagna
committed Details | Review

Description William Jon McCann 2013-03-07 20:30:32 UTC
I've never heard anyone refer to "ice pellets" precipitation. It is, however, common to say sleet or freezing rain.
Comment 1 Bastien Nocera 2013-03-08 10:09:00 UTC
Is it supposed to be "hail" and "hailstones" instead?
http://en.wikipedia.org/wiki/Hail

That would match what I would expect is the size of pellets.
Comment 2 William Jon McCann 2013-03-08 13:55:33 UTC
From http://en.wikipedia.org/wiki/Ice_pellets :
"also referred to as sleet by the United States National Weather Service"
Comment 3 Giovanni Campagna 2013-03-08 22:58:13 UTC
Ok, so various bugs here, some caused by me not having clear the difference between ice pellets, sleet and hail:

1) METAR code for ice pellets is PL, but we recognize PE.
2) yahoo says rain when it means ice pellets
3) yr.no has one missing row in the conversion table
4) ice pellets are translated as, well, ice pellets, and not sleet

For the reference, iwin, which is used in the US, has ice crystals (IC in metar) but not hail or ice pellets. But iwin needs a rework anyway, currently it generates incomplete data.

I'll attach a patch for each of those. 4) needs a string break request too.
Comment 4 Giovanni Campagna 2013-03-08 23:02:48 UTC
Created attachment 238430 [details] [review]
METAR: the code for ice pellets is PL, not PE

According to Wikipedia.
Comment 5 Giovanni Campagna 2013-03-08 23:03:13 UTC
Created attachment 238431 [details] [review]
Yahoo backend: fix parsing of conditions

Sleet is exposed as ice pellets in the API.
Comment 6 Giovanni Campagna 2013-03-08 23:03:25 UTC
Created attachment 238433 [details] [review]
Yr.no backend: fix parsing of conditions

One row went missing when I first introduced the backend.
Also, add a link to the upstream reference, and comments next to each
of the mapping.
Comment 7 Giovanni Campagna 2013-03-08 23:03:55 UTC
Created attachment 238434 [details] [review]
GWeatherInfo: translate ice pellets as "sleet"

Ice pellets is the technical term, but people generally refer to it
as sleet in the US.
Comment 8 Giovanni Campagna 2013-03-18 18:34:57 UTC
Attachment 238430 [details] pushed as 5d8834e - METAR: the code for ice pellets is PL, not PE
Attachment 238431 [details] pushed as 9c84260 - Yahoo backend: fix parsing of conditions
Attachment 238433 [details] pushed as 6edb7ca - Yr.no backend: fix parsing of conditions

Committing only the patches that don't require a freeze break.
The rest will be committed to master after 3.8.0.
Comment 9 Giovanni Campagna 2013-03-26 15:47:28 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.