METAR: the code for ice pellets is PL, not PE

According to Wikipedia.

https://bugzilla.gnome.org/show_bug.cgi?id=695397